--- a/svg/svg.html
+++ b/svg/svg.html
@@ -4,7 +4,7 @@
 		<div id="dom_branch_explorer"></div>
 
 		<script src="../node_modules/svg.js/dist/svg.min.js"></script>
-		<script src="../dist/codice.js"></script>
+		<script src="../dist/svg/svg.js"></script>
 
 	</body>
 </html>
