adapt angular example to plastic

--- a/angular-example/src/index.html
+++ b/angular-example/src/index.html
@@ -1,14 +1,49 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>AngularExample</title>
-  <base href="/">
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+    <meta charset="utf-8">
+    <base href="/">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Always force latest IE rendering engine or request Chrome Frame -->
+    <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
+    <meta name="description" content="gmaster - Dashboard checkout process">
+    <title>Buy Licenses</title>
+
+    <link href="./assets/css" rel="stylesheet" type="text/css">
+    <link href="./assets/styles.css" rel="stylesheet">
+    <link rel="shortcut icon" href="https://gmaster.io/favicon.ico?v=3">
+
+    <link href="./assets/styles-dashboard.css" rel="stylesheet">
+
+  </head>
+
+
+  <body class="Checkout/selectlicenses dashboard selectlicenses">
+
+    <header class="main-header">
+      <div class="logo" id="logo">
+        <a href="https://gmaster.io/">gmaster</a>
+      </div>
+      <!--<nav class="nav nav-public" id="nav-public">-->
+        <!--<a href="https://gmaster.io/features">features</a>-->
+        <!--<a href="https://gmaster.io/buy">buy</a>-->
+        <!--<a href="https://gmaster.io/documents">documents</a>-->
+        <!--<a href="https://gmaster.io/support">support</a>-->
+        <!--<a href="https://gmaster.io/about">about</a>-->
+      <!--</nav>-->
+      <!--<nav class="nav nav-private" id="nav-private">-->
+        <!--<a href="https://gmaster.io/sign%20in" id="button-sigin">sign in</a>-->
+        <!--<a href="https://gmaster.io/sign%20out" id="button-signout">sign out</a>-->
+      <!--</nav>-->
+      <!--<nav class="nav nav-responsive-button" id="nav-responsive-button">-->
+        <!--<a href="https://gmaster.io/checkout/selectlicenses#">☰</a>-->
+      <!--</nav>-->
+    </header><!-- / main-header -->
+
+    <app-root></app-root>
+
+  </body>
 </html>
